title was changed

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
       </fieldset>
 
       <fieldset class="fieldset">
-        <legend>An interesting fact about you!</legend>
+        <legend>An interesting fact about you1!</legend>
 
         <div class="form__label">
           Do you love cats?
